<resources>
	<string name="app_name">find me a room</string>
	<string name="cover">home page cover</string>
	<string name="enter">enter</string>
	<string name="title_activity_login">LoginActivity</string>
	<string name="prompt_id">faculty id</string>
	<string name="prompt_password">password</string>
	<string name="action_sign_in">sign in</string>
	<string name="welcome">"welcome!"</string>
	<string name="invalid_username">not a valid username</string>
	<string name="invalid_password">password must be >5 characters</string>
	<string name="login_failed">"login failed"</string>
	<string name="student_id">student id</string>
	<string name="first_name">first name</string>
	<string name="last_name">last name</string>
	<string name="department">department</string>
	<string name="classroom_id">classroom id</string>
	<string name="update">update</string>
	<string name="delete">delete</string>
	<string name="add">add</string>
	<string name="add_student">add student</string>
	<string name="logout">logout</string>
	<string name="floor">floor: %d</string>
	<string name="ac">air conditioned: %b</string>
</resources>