<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="AddActivity">

	<EditText
		android:id="@+id/student"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="40dp"
		android:autofillHints="student id"
		android:ems="10"
		android:gravity="center"
		android:hint="@string/student_id"
		android:inputType="number" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="10dp" >

		<EditText
			android:id="@+id/firstname"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:autofillHints="first name"
			android:ems="10"
			android:gravity="center"
			android:hint="@string/first_name"
			android:inputType="textPersonName" />

		<EditText
			android:id="@+id/lastname"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:autofillHints="last name"
			android:ems="10"
			android:gravity="center"
			android:hint="@string/last_name"
			android:inputType="textPersonName" />
	</LinearLayout>

	<EditText
		android:id="@+id/department"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		android:autofillHints="department"
		android:gravity="center"
		android:hint="@string/department"
		android:inputType="textAutoCorrect" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="10dp" >

		<EditText
			android:id="@+id/faculty"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:autofillHints="faculty id"
			android:ems="10"
			android:gravity="center"
			android:hint="@string/prompt_id"
			android:inputType="number" />

		<EditText
			android:id="@+id/classroom"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:autofillHints="classroom id"
			android:ems="10"
			android:gravity="center"
			android:hint="@string/classroom_id"
			android:inputType="number" />
	</LinearLayout>

	<Button
		android:id="@+id/add"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="20dp"
		android:gravity="center"
		android:onClick="add_student"
		android:text="@string/add"
		android:textAllCaps="false" />
</LinearLayout>